--- a/.ci/deps_tests/docker-compose.yaml
+++ b/.ci/deps_tests/docker-compose.yaml
@@ -41,28 +41,24 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: public 
       MYSQL_DATABASE: mqtt
-    networks:
-      - emqx-bridge
-    command: --bind-address 0.0.0.0
-  
-  mysql_client:
-    image: mysql:5.7
-    networks:
-      - emqx-bridge
-    depends_on:
-      - mysql_server
     volumes:
-      - ../../_build/emqx/lib/emqx_auth_mysql/mqtt.sql:/emqx_auth_mysql_test.sql
+      - ../../_build/emqx/lib/emqx_auth_mysql/test/emqx_auth_mysql_SUITE_data/ca.pem:/etc/certs/ca-cert.pem
+      - ../../_build/emqx/lib/emqx_auth_mysql/test/emqx_auth_mysql_SUITE_data/server-cert.pem:/etc/certs/server-cert.pem
+      - ../../_build/emqx/lib/emqx_auth_mysql/test/emqx_auth_mysql_SUITE_data/server-key.pem:/etc/certs/server-key.pem
+    networks:
+      - emqx-bridge
     command:
-      - /bin/bash
-      - -c
-      - |
-        service mysql start
-        echo "show tables;" | mysql -h mysql_server -u root -ppublic mqtt
-        while [[ $$? -ne 0 ]];do echo "show tables;" | mysql -h mysql_server -u root -ppublic mqtt; done
-        mysql -h mysql_server -u root -ppublic mqtt</emqx_auth_mysql_test.sql
-        echo "------------show tables------------"
-        echo "show tables;" | mysql -h mysql_server -u root -ppublic mqtt
+      --bind-address 0.0.0.0
+      --default-authentication-plugin=mysql_native_password
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_general_ci
+      --explicit_defaults_for_timestamp=true
+      --lower_case_table_names=1
+      --max_allowed_packet=128M
+      --skip-symbolic-links
+      --ssl-ca=/etc/certs/ca.pem
+      --ssl-cert=/etc/certs/server-cert.pem
+      --ssl-key=/etc/certs/server-key.pem
 
   redis_server:
     build: ./emqx-redis
@@ -96,7 +92,7 @@ services:
     restart: always
     networks:
       - emqx-bridge
- 
+
 networks:
   emqx-bridge:
     driver: bridge
