chore(actions): update coress build (#536)

--- a/.github/workflows/script/Dockerfile
+++ b/.github/workflows/script/Dockerfile
@@ -5,19 +5,17 @@ ARG SYSTEM=ubuntu20.04
 ARG EMQX_NAME=emqx
 ARG EMQX_DEPS_DEFAULT_VSN=master
 
-ENV REL_PATH="/emqx-rel"
-ENV PACKAGE_PATH="/emqx-rel/_packages/${EMQX_NAME}"
-
 COPY . /emqx-rel
 
 WORKDIR /emqx-rel
 
-RUN make ${EMQX_NAME} \
+RUN echo "========================= build ${EMQX_NAME} =========================" \
+    && make ${EMQX_NAME} \
     && pkg=${EMQX_NAME}-${SYSTEM}-${EMQX_DEPS_DEFAULT_VSN#v}-$(uname -m).zip \
     && cd _build/${EMQX_NAME}/rel/ \
     && zip -rq $pkg emqx \
-    && mkdir -p ${PACKAGE_PATH} \
-    && mv $pkg ${PACKAGE_PATH} \
+    && mkdir -p /emqx-rel/_packages/${EMQX_NAME} \
+    && mv $pkg /emqx-rel/_packages/${EMQX_NAME} \
     && cd -
 
 RUN make ${EMQX_NAME}-pkg
